data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_419.wast
;; 10. **Test Description**: A loop where a `br_table` indirectly targets an `unreachable` instruction due to an incorrect label misalignment in the context after labels modification:    - **Constraint Checked**: Correct alignment and addressing in `br_table` instructions.    - **Unreachable Code Execution**: Misaligned label addresses cause incorrect branching, reaching `unreachable` code.

(assert_invalid
  (module (func $incorrect-label-alignment
    (block $outer
      (loop $inner
        (br_table 1 0 (unreachable))
      )
    )
  ))
  "type mismatch"
)